# Sands

./: LICENSE  README.md  sands.cabal
app/: Main.hs
src/: AbsMachine.hs  CoreParser.hs  Visitor.hs
