name:                sands
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/aesadde/sands#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Sadde
maintainer:          albertosadde@gmail.com
copyright:           2016 Alberto Sadde
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AbsMachine
  other-modules:       Utils
                     , CoreParser
                     , CabalParser
                     , Types
                     , Visitor
                     , Scraper

  build-depends:       base >= 4.7 && < 5
                     , ghc
                     , containers
                     , directory
                     , text
                     , filepath
                     , Cabal
                     , HTTP
                     , tagsoup
                     , hashable
                     , safecopy
                     , unordered-containers
                     , stack

  default-language:    Haskell2010

executable sands-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sands
  default-language:    Haskell2010

test-suite sands-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sands
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aesadde/sands
